--- a/proyecto/public/css/ranking.css
+++ b/proyecto/public/css/ranking.css
@@ -9,6 +9,7 @@
     float: left;
 }
 .table_centrar_texto{
-    padding-top: 2%;
-    padding-left: 2%; 
+    margin-top: 2%;
+    float: left;
+    padding-left: 20px;
 }
