--- a/proyecto/public/css/ranking.css
+++ b/proyecto/public/css/ranking.css
@@ -185,11 +185,7 @@ label.light {
         left: 0;
         top: 0;
         width: 100%; 
-        height: 100%;
-        overflow: auto; 
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0,0.4); 
-
+        height: auto;        
         border: 1px solid black
     }
 
