--- a/proyecto/public/css/ranking.css
+++ b/proyecto/public/css/ranking.css
@@ -113,7 +113,7 @@ label.light {
         background: black;
         position: fixed;
         right: 30px;
-        top: 70px;
+        top: 150px;
         cursor: pointer;
         box-shadow: 0px 2px 5px #666;
       }
@@ -194,6 +194,14 @@ label.light {
     }
 
     .modal-content {
+        display: none; 
+        position: fixed;
+        z-index: 1; 
+        padding-top: 50px;
+        left: 0;
+        top: 5%;
+        width: 100%; 
+        height: auto;                
         display: none;        
         border: 1px solid red;
         position: fixed;        
