--- a/proyecto/public/css/style.css
+++ b/proyecto/public/css/style.css
@@ -15,3 +15,23 @@ body{
 h3 .centrar_texto{
     margin: 200px;
 }
+.footer_color{
+    background-color: #00332b;
+}
+
+.card_center{
+    width: 70%;
+    margin: auto;
+    margin-top: 5%; 
+}
+
+.select_correction{
+    display: block;
+}
+
+.centrarInput{
+   padding: 0px 15%;
+}
+.widthButtonInput{
+    width: 100%;
+}
